# neuro-beat

./: .gitignore  README.md  pyproject.toml
configs/: cnn.yaml  default.yaml  lstm.yaml
deploy/runpod/: Dockerfile  README.md  build_and_push.sh  handler.py  sweep.py
docs/: index.html  paper.html
experiments/: baselines_veb.py  end2end_rpeak.py  error_analysis.py  freeze_veb_v1.py  gated_ensemble_veb.py  lock_snn.py  lock_snn_rr.py  search_snn.py  train_sveb_specialist.py  two_stage_veb.py
models/neurobeat-veb-v1/: README.md  cascade.json  gated_ensemble.json  operating_point.json
paper/: neurobeat.html  neurobeat.md  neurobeat.tex
src/neurocardio/: cli.py  config.py
src/neurocardio/data/: dataset.py  download.py  preprocess.py  records.py  segment.py  splits.py
src/neurocardio/encoding/: beat.py
src/neurocardio/eval/: evaluate.py
src/neurocardio/models/: baselines.py  snn.py
src/neurocardio/stream/: qrs.py
src/neurocardio/train/: loop.py
tests/: test_baselines.py  test_beat.py  test_cli_smoke.py  test_config.py  test_dataset.py  test_download.py  test_evaluate.py  test_preprocess.py  test_qrs.py  test_records.py  test_segment.py  test_splits.py  test_train.py
