[project]
name = "neurocardio"
version = "0.1.0"
description = "SNN arrhythmia detector on single-lead ECG (Phase 1 PoC)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "snntorch>=0.9",
    "wfdb>=4.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
neurocardio = "neurocardio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurocardio"]

[tool.pytest.ini_options]
markers = ["slow: requires network / large download (deselected by default)"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
