[project]
name = "neurocardio"
version = "0.1.0"
description = "SNN arrhythmia detector on single-lead ECG (Phase 1 PoC)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "snntorch>=0.9",
    "wfdb>=4.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
neurocardio = "neurocardio.cli:main"

# Pull torch from the CUDA (cu128) wheel index so the GPU is usable on this
# machine (NVIDIA RTX 2060, driver CUDA 12.9). The default PyPI wheel is
# CPU-only; without this uv reverts every `uv run` to torch==*+cpu. cu128's
# newest is 2.11.0, which still satisfies torch>=2.2.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurocardio"]

[tool.pytest.ini_options]
markers = ["slow: requires network / large download (deselected by default)"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
